--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,7 +17,7 @@
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
-				<!-- One -->
+				<!-- Banner -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Matt Poloni</h1>
@@ -33,8 +33,25 @@
 						</div>
 					</section>
 
-				<!-- Two -->
-				<section class="wrapper style1 align-center"  id="first">
+					<!-- Spotlight -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+							<div class="content">
+								<header>
+									<h2>Lambda School | Week One</h2>
+									<p>User Interface Sprint Challenge</p>
+								</header>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+								<ul class="actions stacked">
+									<li><a href="https://github.com/matt-poloni/Sprint-Challenge--User-Interface/tree/matt-poloni" class="button">View GitHub Repo</a></li>
+								</ul>
+							</div>
+							<div class="image">
+								<img src="images/Sprint01.png" alt="" />
+							</div>
+						</section>
+
+				<!-- Gallery Wrapper -->
+				<section class="wrapper style1 align-center">
 						<div class="inner">
 							<header>
 								<h2>User Interface & Git</h2>
@@ -47,7 +64,7 @@
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
 									<a href="https://codepen.io/mattpoloni/pen/wNjmyV" class="image">
-										<img src="images/gallery/thumbs/SweetEats-thumb.png" alt="" />
+										<img src="images/gallery/thumbs/SweetEats-thumb.png" target="_blank" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Day One</h3>
@@ -58,7 +75,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="https://github.com/matt-poloni/User-Interface/tree/matt-poloni" class="image">
+									<a href="https://github.com/matt-poloni/User-Interface/tree/matt-poloni" class="image" target="_blank">
 										<img src="images/gallery/thumbs/GreatIdea01-thumb.png" alt="" />
 									</a>
 									<div class="caption">
@@ -70,7 +87,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="https://github.com/matt-poloni/UI-III-Flexbox/tree/matt-poloni" class="image">
+									<a href="https://github.com/matt-poloni/UI-III-Flexbox/tree/matt-poloni" class="image" target="_blank">
 										<img src="images/gallery/thumbs/GreatIdea02-thumb.png" alt="" />
 									</a>
 									<div class="caption">
@@ -82,7 +99,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="https://github.com/matt-poloni/Sprint-Challenge--User-Interface/tree/matt-poloni" class="image">
+									<a href="https://github.com/matt-poloni/Sprint-Challenge--User-Interface/tree/matt-poloni" class="image" target="_blank">
 										<img src="images/gallery/thumbs/Sprint01-thumb.png" alt="" />
 									</a>
 									<div class="caption">
@@ -95,23 +112,6 @@
 								</article>
 							</div>
 
-					</section>
-
-				<!-- Three -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
-						<div class="content">
-							<header>
-								<h2>Week One | Sprint Challenge</h2>
-								<p>User Interface</p>
-							</header>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
-							<ul class="actions stacked">
-								<li><a href="https://github.com/matt-poloni/Sprint-Challenge--User-Interface/tree/matt-poloni" class="button">View GitHub Repo</a></li>
-							</ul>
-						</div>
-						<div class="image">
-							<img src="images/Sprint01.png" alt="" />
-						</div>
 					</section>
 
 				<!-- Footer -->
