Fleshes out gallery, swaps gallery and spotlight back

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -33,23 +33,6 @@
 						</div>
 					</section>
 
-					<!-- Spotlight -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
-							<div class="content">
-								<header>
-									<h2>Lambda School | Week One</h2>
-									<p>User Interface Sprint Challenge</p>
-								</header>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
-								<ul class="actions stacked">
-									<li><a href="https://github.com/matt-poloni/Sprint-Challenge--User-Interface/tree/matt-poloni" class="button">View GitHub Repo</a></li>
-								</ul>
-							</div>
-							<div class="image">
-								<img src="images/Sprint01.png" alt="" />
-							</div>
-						</section>
-
 				<!-- Gallery Wrapper -->
 				<section class="wrapper style1 align-center">
 						<div class="inner">
@@ -57,7 +40,7 @@
 								<h2>User Interface & Git</h2>
 								<p>Lambda School | Week One</p>
 							</header>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<p>The gallery below contains projects from my first week in Lambda School's Full Stack Web Development track. Over the course of the week, we learned everything the fundamentals of user interface design and how to use both git and GitHub to monitor and control the development of our code.</p>
 						</div>
 
 						<!-- Gallery -->
@@ -68,7 +51,7 @@
 									</a>
 									<div class="caption">
 										<h3>Day One</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<p>Semantic HTML, CSS selectors, & CSS specificity.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">View on Codepen</span></li>
 										</ul>
@@ -80,7 +63,7 @@
 									</a>
 									<div class="caption">
 										<h3>Day Two</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<p>Box model, CSS display properties, & CSS resets.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">View GitHub Repo</span></li>
 										</ul>
@@ -92,7 +75,7 @@
 									</a>
 									<div class="caption">
 										<h3>Day Three</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<p>Flexbox, flex containers, & flex items.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">View GitHub Repo</span></li>
 										</ul>
@@ -104,7 +87,7 @@
 									</a>
 									<div class="caption">
 										<h3>Sprint Challenge</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<p>Capstone project for the week's material. A live preview is spotlighted below.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">View GitHub Repo</span></li>
 										</ul>
@@ -113,6 +96,23 @@
 							</div>
 
 					</section>
+					
+					<!-- Spotlight -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+							<div class="content">
+								<header>
+									<h2>Lambda School | Week One</h2>
+									<p>User Interface Sprint Challenge</p>
+								</header>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+								<ul class="actions stacked">
+									<li><a href="https://htmlpreview.github.io/?https://github.com/matt-poloni/Sprint-Challenge--User-Interface/blob/matt-poloni/index.html" class="button" target="_blank">View Live Preview</a></li>
+								</ul>
+							</div>
+							<div class="image">
+								<img src="images/Sprint01.png" alt="" />
+							</div>
+						</section>
 
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
