Replaces remaining lorem ipsum text

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -104,7 +104,7 @@
 									<h2>Lambda School | Week One</h2>
 									<p>User Interface Sprint Challenge</p>
 								</header>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+								<p>Given a multi-page website with missing styling and elements, I had to build it out to match some provided design files.</p>
 								<ul class="actions stacked">
 									<li><a href="https://htmlpreview.github.io/?https://github.com/matt-poloni/Sprint-Challenge--User-Interface/blob/matt-poloni/index.html" class="button" target="_blank">View Live Preview</a></li>
 								</ul>
