Polishes page, swaps gallery and spotlight again

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -33,6 +33,23 @@
 						</div>
 					</section>
 
+					<!-- Spotlight -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+							<div class="content">
+								<header>
+									<h2>Lambda School | Week One</h2>
+									<p>User Interface Sprint Challenge</p>
+								</header>
+								<p>Given a multi-page website with missing styling and elements, I had to build it out to match some provided design files. You can see a live preview below or view its GitHub repository through the gallery that follows.</p>
+								<ul class="actions stacked">
+									<li><a href="https://htmlpreview.github.io/?https://github.com/matt-poloni/Sprint-Challenge--User-Interface/blob/matt-poloni/index.html" class="button" target="_blank">View Live Preview</a></li>
+								</ul>
+							</div>
+							<div class="image">
+								<img src="images/Sprint01.png" alt="" />
+							</div>
+						</section>
+
 				<!-- Gallery Wrapper -->
 				<section class="wrapper style1 align-center">
 						<div class="inner">
@@ -40,7 +57,7 @@
 								<h2>User Interface & Git</h2>
 								<p>Lambda School | Week One</p>
 							</header>
-							<p>The gallery below contains projects from my first week in Lambda School's Full Stack Web Development track. Over the course of the week, we learned everything the fundamentals of user interface design and how to use both git and GitHub to monitor and control the development of our code.</p>
+							<p>This gallery contains projects from my first week in Lambda School's Full Stack Web Development track and links to the GitHub repository or CodePen for each project. Over the course of the week, we learned everything the fundamentals of user interface design and how to use both git and GitHub to monitor and control the development of our code.</p>
 						</div>
 
 						<!-- Gallery -->
@@ -51,7 +68,7 @@
 									</a>
 									<div class="caption">
 										<h3>Sprint Challenge</h3>
-										<p>Capstone project for the week's material. A live preview is spotlighted below.</p>
+										<p>Capstone project for the week's material. A live preview is spotlighted above.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">View GitHub Repo</span></li>
 										</ul>
@@ -96,23 +113,6 @@
 							</div>
 
 					</section>
-					
-					<!-- Spotlight -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
-							<div class="content">
-								<header>
-									<h2>Lambda School | Week One</h2>
-									<p>User Interface Sprint Challenge</p>
-								</header>
-								<p>Given a multi-page website with missing styling and elements, I had to build it out to match some provided design files.</p>
-								<ul class="actions stacked">
-									<li><a href="https://htmlpreview.github.io/?https://github.com/matt-poloni/Sprint-Challenge--User-Interface/blob/matt-poloni/index.html" class="button" target="_blank">View Live Preview</a></li>
-								</ul>
-							</div>
-							<div class="image">
-								<img src="images/Sprint01.png" alt="" />
-							</div>
-						</section>
 
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
