Fixes typo in gallery section

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -57,7 +57,7 @@
 								<h2>User Interface & Git</h2>
 								<p>Lambda School | Week One</p>
 							</header>
-							<p>This gallery contains projects from my first week in Lambda School's Full Stack Web Development track and links to the GitHub repository or CodePen for each project. Over the course of the week, we learned everything the fundamentals of user interface design and how to use both git and GitHub to monitor and control the development of our code.</p>
+							<p>This gallery contains projects from my first week in Lambda School's Full Stack Web Development track and links to the GitHub repository or CodePen for each project. Over the course of the week, we learned everything about the fundamentals of user interface design and how to use both git and GitHub to monitor and control the development of our code.</p>
 						</div>
 
 						<!-- Gallery -->
