Makes forgotten change on 'View My Work' button

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -25,7 +25,7 @@
 								I'm a student in the Full Stack Web Development track at Lambda School who currently resides in the greater Tampa Bay area.
 							</p>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">View My Work</a></li>
+								<li><a href="#first" class="button big wide primary smooth-scroll-middle">View My Work</a></li>
 							</ul>
 						</div>
 						<div class="image">
