Adds icons to relevant buttons

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -42,7 +42,7 @@
 								</header>
 								<p>Given a multi-page website with missing styling and elements, I had to build it out to match some provided design files. You can see a live preview below or view its GitHub repository through the gallery that follows.</p>
 								<ul class="actions stacked">
-									<li><a href="https://htmlpreview.github.io/?https://github.com/matt-poloni/Sprint-Challenge--User-Interface/blob/matt-poloni/index.html" class="button primary" target="_blank">View Live Preview</a></li>
+									<li><a href="https://htmlpreview.github.io/?https://github.com/matt-poloni/Sprint-Challenge--User-Interface/blob/matt-poloni/index.html" class="button primary icon fa-github" target="_blank">View Live Preview</a></li>
 								</ul>
 							</div>
 							<div class="image">
@@ -70,7 +70,7 @@
 										<h3>Sprint Challenge</h3>
 										<p>Capstone project for the week's material. A live preview is spotlighted above.</p>
 										<ul class="actions fixed">
-											<li><span class="button small primary">View GitHub Repo</span></li>
+											<li><span class="button small primary icon fa-github">View GitHub Repo</span></li>
 										</ul>
 									</div>
 								</article>
@@ -82,7 +82,7 @@
 										<h3>Day Three</h3>
 										<p>Flexbox, flex containers, & flex items.</p>
 										<ul class="actions fixed">
-											<li><span class="button small primary">View GitHub Repo</span></li>
+											<li><span class="button small primary icon fa-github">View GitHub Repo</span></li>
 										</ul>
 									</div>
 								</article>
@@ -94,7 +94,7 @@
 										<h3>Day Two</h3>
 										<p>Box model, CSS display properties, & CSS resets.</p>
 										<ul class="actions fixed">
-											<li><span class="button small primary">View GitHub Repo</span></li>
+											<li><span class="button small primary icon fa-github">View GitHub Repo</span></li>
 										</ul>
 									</div>
 								</article>
@@ -106,7 +106,7 @@
 										<h3>Day One</h3>
 										<p>Semantic HTML, CSS selectors, & CSS specificity.</p>
 										<ul class="actions fixed">
-											<li><span class="button small primary">View on Codepen</span></li>
+											<li><span class="button small primary icon fa-codepen">View on Codepen</span></li>
 										</ul>
 									</div>
 								</article>
