Corrects misspelling of CodePen

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -106,7 +106,7 @@
 										<h3>Day One</h3>
 										<p>Semantic HTML, CSS selectors, & CSS specificity.</p>
 										<ul class="actions fixed">
-											<li><span class="button small primary icon fa-codepen">View on Codepen</span></li>
+											<li><span class="button small primary icon fa-codepen">View on CodePen</span></li>
 										</ul>
 									</div>
 								</article>
