Meets MVP for careers assignment

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 								I'm a student in the Full Stack Web Development track at Lambda School who currently resides in the greater Tampa Bay area.
 							</p>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide primary smooth-scroll-middle">View My Work</a></li>
+								<li><a href="https://www.linkedin.com/in/mattpoloni" class="button primary icon fa-linkedin" target="_blank">LinkedIn</a></li>
+								<li><a href="https://www.twitter.com/matt_poloni" class="button primary icon fa-twitter" target="_blank">Twitter</a></li>
+								<li><a href="https://www.github.com/matt-poloni" class="button primary icon fa-github" target="_blank">GitHub</a></li>
+								<li><a href="mailto:matt.poloni@gmail.com" class="button primary icon fa-envelope" target="_blank">Email</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -35,33 +38,67 @@
 
 					<!-- Spotlight -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
-							<div class="content">
-								<header>
-									<h2>Lambda School | Week One</h2>
-									<p>User Interface Sprint Challenge</p>
-								</header>
-								<p>Given a multi-page website with missing styling and elements, I had to build it out to match some provided design files. You can see a live preview below or view its GitHub repository through the gallery that follows.</p>
-								<ul class="actions stacked">
-									<li><a href="https://htmlpreview.github.io/?https://github.com/matt-poloni/Sprint-Challenge--User-Interface/blob/matt-poloni/index.html" class="button primary icon fa-github" target="_blank">View Live Preview</a></li>
-								</ul>
-							</div>
-							<div class="image">
-								<img src="images/Sprint01.png" alt="" />
-							</div>
-						</section>
+						<div class="content">
+							<header>
+								<h2>Shots Fired</h2>
+								<p>Week 5 | Build Week</p>
+							</header>
+							<p>Working together with two of Lambda School's data science students and two fellow web development students, each further along in the curriculum, I created the landing page/marketing site for a gun violence heatmap data application.</p>
+							<ul class="actions stacked">
+								<li><a href="https://shots-fired-marketing.netlify.com/index.html" class="button primary icon fa-desktop" target="_blank">View Live Site</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/ShotsFired.png" alt="" />
+						</div>
+					</section>
+
+					<!-- Spotlight -->
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
+							<header>
+								<h2>React Insta Clone</h2>
+								<p>Week 7 | Intermediate React</p>
+							</header>
+							<p>After only one full week of learning React, I was tasked with building a limited version of the Instagram login page and feed.</p>
+							<ul class="actions stacked">
+								<li><a href="https://github.com/matt-poloni/React-Insta-Clone" class="button primary icon fa-github" target="_blank">View GitHub Repo</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/ReactInstaClone.png" alt="" />
+						</div>
+					</section>
+
+					<!-- Spotlight -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
+							<header>
+								<h2>React Todo App</h2>
+								<p>Week 6 | Intro to React</p>
+							</header>
+							<p>My first taste of React, this is my version of the standard Todo List app built by many developers in their early days of learning React.</p>
+							<ul class="actions stacked">
+								<li><a href="https://github.com/matt-poloni/React-Todo" class="button primary icon fa-github" target="_blank">View GitHub Repo</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/ReactTodo.png" alt="" />
+						</div>
+					</section>
 
 				<!-- Gallery Wrapper -->
-				<section class="wrapper style1 align-center">
+				<!-- <section class="wrapper style1 align-center">
 						<div class="inner">
 							<header>
 								<h2>User Interface & Git</h2>
 								<p>Lambda School | Week One</p>
 							</header>
 							<p>This gallery contains projects from my first week in Lambda School's Full Stack Web Development track and links to the GitHub repository or CodePen for each project. Over the course of the week, we learned everything about the fundamentals of user interface design and how to use both git and GitHub to monitor and control the development of our code.</p>
-						</div>
+						</div> -->
 
 						<!-- Gallery -->
-							<div class="gallery style2 medium lightbox onscroll-fade-in">
+							<!-- <div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
 									<a href="https://github.com/matt-poloni/Sprint-Challenge--User-Interface/tree/matt-poloni" class="image" target="_blank">
 										<img src="images/gallery/thumbs/Sprint01-thumb.png" alt="" />
@@ -112,7 +149,7 @@
 								</article>
 							</div>
 
-					</section>
+					</section> -->
 
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
